force-app/main/default/objects/Insolvency_Error__c/Insolvency_Error__c.object-meta.xml
<CustomObject>
    <description>An object to store error/exception related to Insolvency flow</description>
    <label>Insolvency Error</label>
    <nameField>
        <displayFormat>IErr-{0000}</displayFormat>
        <label>Insolvency Error Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Insolvency Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>