force-app/main/default/objects/Insolvency_Error__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <description>Action that caused the error/exception</description>
    <inlineHelpText>Action that caused the error/exception</inlineHelpText>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PoC Generation</fullName>
            </value>
            <value>
                <fullName>Email Trustee</fullName>
            </value>
            <value>
                <fullName>Trustee Assignment</fullName>
            </value>
            <value>
                <fullName>Document Upload</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>