force-app/main/default/objects/Insolvency_Error__c/fields/Error__c.field-meta.xml
<CustomField>
    <fullName>Error__c</fullName>
    <description>Error / Exception Details</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Error / Exception Details</inlineHelpText>
    <label>Error</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>