force-app/main/default/objects/Insolvency_Error__c/fields/Insolvency_Account__c.field-meta.xml
<CustomField>
    <fullName>Insolvency_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Insolvency Account record</description>
    <inlineHelpText>Related Insolvency Account record</inlineHelpText>
    <label>Insolvency Account</label>
    <referenceTo>Insolvency_Account__c</referenceTo>
    <relationshipLabel>Insolvency Errors</relationshipLabel>
    <relationshipName>Insolvency_Errors</relationshipName>
    <type>Lookup</type>
</CustomField>