force-app/main/default/objects/Insolvency_Error__c/fields/Insolvency_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Insolvency_Account_Name__c</fullName>
    <description>Name of the Insolvency Account record</description>
    <formula>Insolvency_Account__r.Name</formula>
    <inlineHelpText>Name of the Insolvency Account record</inlineHelpText>
    <label>Insolvency Account Name</label>
    <type>Text</type>
</CustomField>