force-app/main/default/objects/Insolvency_Error__c/fields/Insolvency_Name__c.field-meta.xml
<CustomField>
    <fullName>Insolvency_Name__c</fullName>
    <description>Name of the Insolvency record</description>
    <formula>Insolvency__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Name of the Insolvency record</inlineHelpText>
    <label>Insolvency Name</label>
    <type>Text</type>
</CustomField>